debloat SkyblockerConfig.java + translate change
removed text.autoconfig. prefix
new way is skyblocker.option.